adding lighthouse functionality
