# backend/go/model_controller.go
@@ -1,0 +1,44 @@
+/*
+ * ICOS Shell
+ *
+ * This is the ICOS Shell based on the OpenAPI 3.0 specification.
+ *
+ * API version: 1.0.11
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package shellbackend
+
+type Controller struct {
+
+	Name string `json:"name"`
+
+	Address string `json:"address"`
+}
+
+// AssertControllerRequired checks if the required fields are not zero-ed
+func AssertControllerRequired(obj Controller) error {
+	elements := map[string]interface{}{
+		"name": obj.Name,
+		"address": obj.Address,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertRecurseControllerRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of Controller (e.g. [][]Controller), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseControllerRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aController, ok := obj.(Controller)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertControllerRequired(aController)
+	})
+}
